// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clear alert should dispatch the correct action 1`] = `
Array [
  Object {
    "payload": Object {
      "id": "alert_1",
    },
    "type": "CLEAR_GLOBAL_ALERT",
  },
]
`;

exports[`show alert should dispatch the correct action 1`] = `
Array [
  Object {
    "payload": Object {
      "message": "a message",
      "type": "success",
    },
    "type": "SHOW_GLOBAL_ALERT",
  },
]
`;

exports[`show alert should dispatch the correct action without type 1`] = `
Array [
  Object {
    "payload": Object {
      "message": "a message",
    },
    "type": "SHOW_GLOBAL_ALERT",
  },
]
`;
